--- a/resources/TODO
+++ b/resources/TODO
@@ -16,9 +16,12 @@
 	- Changed mind, break out into 3 pages, a product page, and overview
 - badges page
 - rewards page
-- implement recaptcha
++ implement recaptcha
 + Take authid out of all post urls for security(just pick it up from the req.cookies)
 'This creator has enough in their account to reward their funders for X years
 Use disqus, and use the creators name as the disqus Identifier for each creators page
+
+- Work on main page
+	- Use fiverr to get a front thing to look like kickstarter
 
  
