--- a/resources/TODO
+++ b/resources/TODO
@@ -23,5 +23,8 @@ Use disqus, and use the creators name as the disqus Identifier for each creators
 
 - Work on main page
 	- Use fiverr to get a front thing to look like kickstarter
+- Prepending currency to input boxes
+- show alerts on dashboards if results come back zero
+- add correct deposit stuff to creators pages
 
  
