updated bootstrap validator

--- a/resources/TODO
+++ b/resources/TODO
@@ -26,5 +26,8 @@ Use disqus, and use the creators name as the disqus Identifier for each creators
 + Prepending currency to input boxes
 - show alerts on dashboards if results come back zero
 - add correct deposit stuff to creators pages
+- disclaimers when signing up, just have a check box
++ FAQ
++ front page
 
  
