show pieces available

--- a/resources/TODO
+++ b/resources/TODO
@@ -30,6 +30,6 @@ Use disqus, and use the creators name as the disqus Identifier for each creators
 + FAQ
 + front page
 - The mod rewrite stuff
-- Creator register page issuing pieces reward percent/total/all that
++ Creator register page issuing pieces reward percent/total/all that
 
  
