--- a/resources/TODO
+++ b/resources/TODO
@@ -31,5 +31,7 @@ Use disqus, and use the creators name as the disqus Identifier for each creators
 + front page
 - The mod rewrite stuff
 + Creator register page issuing pieces reward percent/total/all that
-
- 
++ cookie expiration
+- notifications
+- a redirect on all dashboardy type pages if you're not logged in
+- Badges page
