Need to start working on mod-rewrite stuff next

--- a/resources/TODO
+++ b/resources/TODO
@@ -35,3 +35,5 @@ Use disqus, and use the creators name as the disqus Identifier for each creators
 - notifications
 - a redirect on all dashboardy type pages if you're not logged in
 - Badges page
+- I forgot my password
+- Get dev working again
