--- a/resources/TODO
+++ b/resources/TODO
@@ -36,5 +36,5 @@ Use disqus, and use the creators name as the disqus Identifier for each creators
 - a redirect on all dashboardy type pages if you're not logged in
 - Badges page
 - I forgot my password
-- change my password
++ change my password
 - Get dev working again
