--- a/resources/TODO
+++ b/resources/TODO
@@ -33,8 +33,8 @@ Use disqus, and use the creators name as the disqus Identifier for each creators
 + Creator register page issuing pieces reward percent/total/all that
 + cookie expiration
 - notifications
-- a redirect on all dashboardy type pages if you're not logged in
++ a redirect on all dashboardy type pages if you're not logged in
 - Badges page
 - I forgot my password
 + change my password
-- Get dev working again
+- Get test/dev working again, remember to separate cookies
