--- a/resources/TODO
+++ b/resources/TODO
@@ -38,3 +38,6 @@ Use disqus, and use the creators name as the disqus Identifier for each creators
 - I forgot my password
 + change my password
 - Get test/dev working again, remember to separate cookies
+- Create a test page, link to the main page
+- Get testing working on remote first
+- 
