--- a/resources/TODO
+++ b/resources/TODO
@@ -37,7 +37,7 @@ Use disqus, and use the creators name as the disqus Identifier for each creators
 - Badges page
 - I forgot my password
 + change my password
-- Get test/dev working again, remember to separate cookies
-- Create a test page, link to the main page
++ Get test/dev working again, remember to separate cookies
++ Create a test page, link to the main page
 - Get testing working on remote first
-- 
+- Add hrefs to all tables with user or creator info
