adding the scheduler to the web service, for simplicity

--- a/resources/TODO
+++ b/resources/TODO
@@ -40,4 +40,4 @@ Use disqus, and use the creators name as the disqus Identifier for each creators
 + Get test/dev working again, remember to separate cookies
 + Create a test page, link to the main page
 - Get testing working on remote first
-- Add hrefs to all tables with user or creator info
++ Add hrefs to all tables with user or creator info
