starting on moving raise funds form

--- a/resources/TODO
+++ b/resources/TODO
@@ -41,3 +41,4 @@ Use disqus, and use the creators name as the disqus Identifier for each creators
 + Create a test page, link to the main page
 - Get testing working on remote first
 + Add hrefs to all tables with user or creator info
+- Change raise funds to a modal once your page is done
