Fixed discover json

--- a/resources/TODO
+++ b/resources/TODO
@@ -39,6 +39,6 @@ Use disqus, and use the creators name as the disqus Identifier for each creators
 + change my password
 + Get test/dev working again, remember to separate cookies
 + Create a test page, link to the main page
-- Get testing working on remote first
++ Get testing working on remote first
 + Add hrefs to all tables with user or creator info
-- Change raise funds to a modal once your page is done
++ Change raise funds to a modal once your page is done
