change to script

--- a/resources/TODO
+++ b/resources/TODO
@@ -44,3 +44,4 @@ Use disqus, and use the creators name as the disqus Identifier for each creators
 + Change raise funds to a modal once your page is done
 - Setup DNS
 - Virtual private servers to folders
+- setup test.bitpieces.com
