--- a/resources/TODO
+++ b/resources/TODO
@@ -45,3 +45,4 @@ Use disqus, and use the creators name as the disqus Identifier for each creators
 - Setup DNS
 - Virtual private servers to folders
 - setup test.bitpieces.com
+- setup ssl on bitpieces.com
