--- a/resources/TODO
+++ b/resources/TODO
@@ -33,6 +33,7 @@ Use disqus, and use the creators name as the disqus Identifier for each creators
 + Creator register page issuing pieces reward percent/total/all that
 + cookie expiration
 - notifications
+	- Email me when a bid or ask completes
 + a redirect on all dashboardy type pages if you're not logged in
 - Badges page
 - I forgot my password
@@ -46,4 +47,5 @@ Use disqus, and use the creators name as the disqus Identifier for each creators
 + Virtual private servers to folders
 + setup test.bitpieces.com
 - setup ssl on bitpieces.com
-- create badges
+- create badges(postpone till after launch)
++ fix tatiana suggestions
