fixing remove button

--- a/resources/TODO
+++ b/resources/TODO
@@ -49,3 +49,4 @@ Use disqus, and use the creators name as the disqus Identifier for each creators
 - setup ssl on bitpieces.com
 - create badges(postpone till after launch)
 + fix tatiana suggestions
+- fix bid and ask trashcan button visible
