--- a/resources/TODO
+++ b/resources/TODO
@@ -26,7 +26,7 @@ Use disqus, and use the creators name as the disqus Identifier for each creators
 + Prepending currency to input boxes
 + show alerts on dashboards if results come back zero
 + add correct deposit stuff to creators pages
-- disclaimers when signing up, just have a check box, still need to write them
+
 + FAQ
 + front page
 + The mod rewrite stuff
@@ -51,3 +51,5 @@ Use disqus, and use the creators name as the disqus Identifier for each creators
 + fix tatiana suggestions
 + fix bid and ask trashcan button visible
 - Make sure creators safety ratings is explained for starting creators
+- disclaimers when signing up, just have a check box, still need to write them
+- page reloads where it makes sense
