--- a/resources/TODO
+++ b/resources/TODO
@@ -53,15 +53,8 @@ Use disqus, and use the creators name as the disqus Identifier for each creators
 - Make sure creators safety ratings is explained for starting creators
 - disclaimers when signing up, just have a check box, still need to write them
 - page reloads where it makes sense
-- Video
-- Creator
-- FAQ how is worth calculated
-- 
-
-----
-This is really helpful. I've added a ton of things you suggested to my TODO list.
-
-> Elevator Pitch
-
-I've really 
++ Creator
++ FAQ how is worth calculated
+- Buy an explainer whiteboard video
+- Write the script for it
 
