--- a/resources/TODO
+++ b/resources/TODO
@@ -57,4 +57,5 @@ Use disqus, and use the creators name as the disqus Identifier for each creators
 + FAQ how is worth calculated
 - Buy an explainer whiteboard video
 - Write the script for it
+- add google analytics
 
