--- a/resources/TODO
+++ b/resources/TODO
@@ -58,4 +58,5 @@ Use disqus, and use the creators name as the disqus Identifier for each creators
 - Buy an explainer whiteboard video
 - Write the script for it
 - add google analytics(not sure if working yet)
+- Create the bitpieces content page
 
