--- a/resources/TODO
+++ b/resources/TODO
@@ -59,5 +59,5 @@ Use disqus, and use the creators name as the disqus Identifier for each creators
 - Write the script for it
 - add google analytics(not sure if working yet)
 - Create the bitpieces content page, on creatorpoo7
-- logging out when the auth-id is null
+- logging out when the auth-id is null(instead, try to get that time from the response header)
 
