--- a/resources/TODO
+++ b/resources/TODO
@@ -60,5 +60,11 @@ Use disqus, and use the creators name as the disqus Identifier for each creators
 - add google analytics(not sure if working yet)
 - Create the bitpieces content page, on creatorpoo7
 - logging out when the auth-id is null(instead, try to get that time from the response header)
-- color suggestions : 40A6C2, F5DD42
+- color suggestions : 
+40A6C2, 6/10, 
+F5DD42
+26754B
+752650
+BA2800
+8DA802
 
