last commit for the day

--- a/resources/TODO
+++ b/resources/TODO
@@ -75,3 +75,4 @@ BA2800 5.0, orangish-red
 008A2E, dark green
 
 - change all the images to color again
+- Add some bunch of pictures and descriptions for your creator page
