--- a/resources/TODO
+++ b/resources/TODO
@@ -76,3 +76,6 @@ BA2800 5.0, orangish-red
 
 - change all the images to color again
 - Add some bunch of pictures and descriptions for your creator page
+- Rewards page pie chart
+- test money after UI change
+- footer size
