--- a/resources/TODO
+++ b/resources/TODO
@@ -82,6 +82,10 @@ BA2800 5.0, orangish-red
 + rewards paid to users pie chart
 - currencies in charts
 
-- Fix reward change sql
-- On raise funds form, first set a limit
-- Have a scheduled process called the creators funds checker, that if 
++ Fix reward change sql
+- On raise funds form, first set a limit, 
+- after the initial 
+- 2 safety measures
+- scheduled poller that checks when a creators funds are less than .000001BTC, and then sets the reward_pct to zero, and freezes the account.
+- A reward limit of $15/piece/year ;
+
