--- a/resources/TODO
+++ b/resources/TODO
@@ -88,4 +88,5 @@ BA2800 5.0, orangish-red
 - 2 safety measures
 - scheduled poller that checks when a creators funds are less than .000001BTC, and then sets the reward_pct to zero, and freezes the account.
 - A reward limit of $15/piece/year ;
+- replace all loading with fa spinner
 
