--- a/resources/TODO
+++ b/resources/TODO
@@ -91,6 +91,8 @@ BA2800 5.0, orangish-red
 + Do hrefs for users pages
 + requires adding creator column , views : users_transactions, users_activity
 + fix main page
++ add logins from every page
 - add verified column
-- add logins from every page
+- add a fee_pct column to the creators table, defaulted to .05
+
 
