changed a line on the landing page

--- a/resources/TODO
+++ b/resources/TODO
@@ -101,5 +101,6 @@ BA2800 5.0, orangish-red
 	<label id="fee_pct" class="col-sm-2 control-label" for="formGroupInputLarge"></label>
 
 - consult a securities lawyer
+- Work on some fiverr scripts for some 1 minute videos
 
 
