--- a/resources/TODO
+++ b/resources/TODO
@@ -101,6 +101,10 @@ BA2800 5.0, orangish-red
 	<label id="fee_pct" class="col-sm-2 control-label" for="formGroupInputLarge"></label>
 
 - consult a securities lawyer
-- Work on some fiverr scripts for some 1 minute videos
++ Work on some fiverr scripts for some 1 minute videos
+- Start working on a description field, youtube link field
+- Start emulating indiegogo/kickstarter discover
+- Use youtube thumbnail as main image, show them the link of how to change the thumbnail
+
 
 
