--- a/resources/TODO
+++ b/resources/TODO
@@ -107,6 +107,7 @@ BA2800 5.0, orangish-red
 - Use youtube thumbnail as main image, show them the link of how to change the thumbnail
 
 - regen tables : creators_page_fields_view, creators_search_square_view
+- when on a creator, change the page title to the creator name
 
 
 
