--- a/resources/TODO
+++ b/resources/TODO
@@ -110,6 +110,9 @@ BA2800 5.0, orangish-red
 + when on a creator, change the page title to the creator name
 + Change the correct active classes on test site
 - About to port changes to main site!
+- start adding openID facebook and google logins
+- fix deposit and withdrawal times, use the start_time instead? 
+	-It's weird to see deposit happen sooner than a buy, simply because it sent another callback 
 
 
 
